fix menu-bar overflow button styles

--- a/packages/aura/src/components/menu-bar.css
+++ b/packages/aura/src/components/menu-bar.css
@@ -1,5 +1,5 @@
 @container not style(--vaadin-menu-bar-gap) {
-  vaadin-menu-bar-button:not([first-visible]) {
+  vaadin-menu-bar:not([has-single-button]) vaadin-menu-bar-button:not([first-visible]) {
     border-inline-start-color: transparent;
   }
 }
@@ -8,4 +8,9 @@
   vaadin-menu-bar-button vaadin-menu-bar-item:not([disabled]):hover {
     background: transparent;
   }
+}
+
+vaadin-menu-bar-button[slot='overflow'] {
+  font-family: system-ui, sans-serif;
+  font-weight: 600;
 }
